Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-17100

[C++][Parquet] Fix backwards compatibility for ParquetV2 data pages written prior to 3.0.0 per ARROW-10353

    XMLWordPrintableJSON

Details

    Description

      As described in https://lists.apache.org/thread/xkrhgfpk9sr1mj74d4chz3r5yp3szt6c,

      https://github.com/apache/arrow/commit/ef0feb2c9c959681d8a105cbadc1ae6580789e69

      Caused some files written prior to 3.0.0 to be unreadable. Given that the patch was small, this will hopefully not be too difficult to fix

      Attachments

        Issue Links

          Activity

            People

              wjones127 Will Jones
              wjones127 Will Jones
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 3h 20m
                  3h 20m