ARROW-17100: [C++][Parquet] Fix backwards compatibility for ParquetV2 data pages written prior to 3.0.0 per ARROW-10353 (#13665)

With these changes I can successfully read the parquet file provides in the original report.

Parquet file: https://www.dropbox.com/s/portxgch3fpovnz/test2.parq?dl=0
Gist to generate: https://gist.github.com/bivald/f93448eaf25808284c4029c691a58a6a
Original report: https://lists.apache.org/thread/wtbqozdhj2hwn6f0sps2j70lr07grk06

Based off of changes in ARROW-10353

Authored-by: Will Jones <willjones127@gmail.com>
Signed-off-by: David Li <li.davidm96@gmail.com>